[tool.poetry]
name = "gino-fastapi-demo"
version = "0.1.0"
description = ""
authors = ["sharon <sharon.kun@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.plugins."gino_fastapi_demo.modules"]
gino-fastapi-demo = "gino_fastapi_demo.views.users"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

